SLING-12274 - Introduce import pre-processor hook. (#137)
* SLING-12274 - Introduce import pre-processor hook.

* Use snapshot

---------

Co-authored-by: Danilo Banjac <dbanjac@adobe.com>
Co-authored-by: Christian Schneider <chris@die-schneider.net>