@@ -28,9 +28,9 @@ import static org.mockito.Mockito.when;
 import java.io.Closeable;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 
@@ -270,7 +270,8 @@ public class PubQueueProviderTest {
                 .pkgId(packageId)
                 .reqType(ReqType.ADD)
                 .pkgType("journal")
-                .paths(Arrays.asList("path"))
+                .paths(List.of("path"))
+                .deepPaths(List.of("deep-path"))
                 .build();
     }
 }
